--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,8 @@
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@800&family=Heebo:wght@500&family=Rubik+Iso&family=Space+Grotesk:wght@500&display=swap" rel="stylesheet">
     <!-- Bootstrap icon CDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
+    <!-- AOS LINK -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body class="bg-secondary">
@@ -96,10 +98,16 @@
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-12">
-                            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
+                            <div class="container-lg b ">
+                                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
                                 style="height: 200px"></textarea>
-
+                            </div>
+                            
+                            <div class="container my-3 text-center">
+                                <a class="btn btn-success ms-auto px-4" href="#">Submit</a>
+                            </div>
                         </div>
+
                     </form>
                 </div>
             </div>
@@ -124,6 +132,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
         integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
         crossorigin="anonymous"></script>
+          <!-- AOS SCRIPT -->
+          <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+          <script>
+              AOS.init();
+            </script>
 </body>
 
 </html>
