--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
     <!-- google font -->
-    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@800&family=Heebo:wght@500&family=Rubik+Iso&family=Space+Grotesk:wght@500&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@800&family=Heebo:wght@500&family=Rubik+Iso&family=Space+Grotesk:wght@500&display=swap"
+        rel="stylesheet">
     <!-- Bootstrap icon CDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
+    <!-- AOS LINK -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body class="bg-secondary">
@@ -39,7 +43,7 @@
     <section class="bg-body-tertiary shadow">
         <div class="container  d-none d-lg-block">
             <div class="row align-items-center gy-3">
-                <div class="col-sm-6 col-md-5 col-lg-6">
+                <div class="col-sm-6 col-md-5 col-lg-6" data-aos="fade-right"  data-aos-duration="3000">
                     <div class="container">
                         <h4>This is me</h4>
                         <h2 class="fw-bold display-2 text-success">Hi, I'm Jane Rosie</h2>
@@ -51,12 +55,12 @@
                         </p>
                     </div>
                     <div class="container-fluid">
-                        <a href="./about-me.html" class="btn btn-outline-success icon-link icon-link-hover">Learn More <i
-                                class="bi bi-arrow-right text-sucess mb-2"></i></a>
+                        <a href="./about-me.html" class="btn btn-outline-success icon-link icon-link-hover">Learn More
+                            <i class="bi bi-arrow-right text-sucess mb-2"></i></a>
                         <a href="./resume.html" class=" btn btn-success px-3">Hire Me</a>
                     </div>
                 </div>
-                <div class="col-sm-6 col-md-6 col-lg-6">
+                <div class="col-sm-6 col-md-6 col-lg-6" data-aos="fade-left"  data-aos-duration="3000">
                     <div class="container-fliud text-center mx-4">
                         <img class="img-fluid h-25" src="./assets/Img/Hero-bg.png" alt="">
                     </div>
@@ -93,12 +97,12 @@
     <section class="bg-secondary">
         <div class="container mt-5 pt-5">
             <div class="row align-items-center justify-content-center gy-5 pb-5">
-                <div class="col-sm-12 col-md-6 col-lg-6">
+                <div class="col-sm-12 col-md-6 col-lg-6" data-aos="fade-up" data-aos-duration="3000">
                     <div class="card shadow-light">
                         <img class="img-fluid w-100 rounded" src="./assets/Img/about-img.jpg" alt="">
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-6">
+                <div class="col-sm-12 col-md-6 col-lg-6" data-aos="fade-up" data-aos-duration="3000">
                     <div class="container text-light text-center">
                         <h2 class="">About Me</h2>
                         <p>
@@ -119,7 +123,7 @@
     <!-- contact section -->
     <section class="bg-light py-5">
         <h2 class="text-center fw-bold text-success">Contact Me</h2>
-        <div class="container-fluid pt-3">
+        <div class="container-fluid pt-3" data-aos="zoom-in" data-aos-duration="3000" data-aos-anchor-placement="center-bottom">
             <div class="row justify-content-center align-items-center gy-4">
                 <div class="col-sm-12 col-md-12 col-lg-4">
                     <div class="d-flex justify-content-center">
@@ -168,10 +172,16 @@
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-12">
-                            <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
+                            <div class="container">
+                                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
                                 style="height: 200px"></textarea>
-
+                            </div>
+                            
+                            <div class="container my-3 text-center">
+                                <a class="btn btn-success ms-auto px-4" href="#">Submit</a>
+                            </div>
                         </div>
+
                     </form>
                 </div>
             </div>
@@ -202,6 +212,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
         integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
         crossorigin="anonymous"></script>
+
+        <!-- AOS SCRIPT -->
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+        <script>
+            AOS.init();
+          </script>
 </body>
 
 </html>
