--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,9 @@
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
     <!-- google font -->
-    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@800&family=Heebo:wght@500&family=Rubik+Iso&family=Space+Grotesk:wght@500&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@800&family=Heebo:wght@500&family=Rubik+Iso&family=Space+Grotesk:wght@500&display=swap"
+        rel="stylesheet">
     <!-- Bootstrap icon CDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
 </head>
@@ -48,13 +50,13 @@
                 <div class="col-lg-8 py-3">
                     <div class="card rounded-3 shadow p-5">
                         <div class="row justify-content-center align-items-center gx-5 gy-4">
-                            <div class="col-lg-3 col-md-6 rounded bg-sec text-light text-center px-1">
+                            <div class="col-lg-3 col-md-6 rounded bg-sec text-success text-center px-1">
                                 <p class="fs-4 text-success fw-bold pt-2">
                                     2017 - Present
                                 </p>
-                                <h6>✓ Bookshop Assistant:
+                                <h6 class="text-success">✓ Bookshop Assistant:
                                 </h6>
-                                <p class="text-light p-2">
+                                <p class="p-2 text-success">
                                     Godfrey Okoye University and its Group of Institutions.
                                 </p>
                             </div>
@@ -75,12 +77,12 @@
                 <div class="col-lg-8 py-3">
                     <div class="card rounded-3 shadow p-5">
                         <div class="row justify-content-center align-items-center gx-5 gy-4">
-                            <div class="col-lg-3 col-md-6 rounded bg-sec text-light text-center px-1">
+                            <div class="col-lg-3 col-md-6 rounded bg-sec text-success text-center px-1">
                                 <p class="fs-4 text-success fw-bold pt-2">
                                     2017 - Present
                                 </p>
                                 <h6>✓ Receptionist</h6>
-                                <p class="text-light p-2">
+                                <p class="text-success p-2">
                                     Godfrey Okoye University and its Group of Institutions.
                                 </p>
                             </div>
@@ -107,12 +109,12 @@
                 <div class="col-lg-8 py-3">
                     <div class="card rounded-3 shadow p-5">
                         <div class="row justify-content-center align-items-center gx-5 gy-4">
-                            <div class="col-lg-3 col-md-6 rounded bg-sec text-light text-center px-1">
+                            <div class="col-lg-3 col-md-6 rounded bg-sec text-success text-center px-1">
                                 <p class="fs-4 text-success fw-bold pt-2">
                                     2017 - Present
                                 </p>
                                 <h6>✓Classroom Teacher (Chemistry and Basic Science):</h6>
-                                <p class="text-light p-2">
+                                <p class="p-2">
                                     Godfrey Okoye University and its Group of Institutions.
                                 </p>
                             </div>
@@ -137,13 +139,13 @@
                 <div class="col-lg-8 py-3">
                     <div class="card rounded-3 shadow p-5">
                         <div class="row justify-content-center align-items-center gx-5 gy-4">
-                            <div class="col-lg-3 col-md-6 rounded bg-sec text-light text-center px-1">
+                            <div class="col-lg-3 col-md-6 rounded bg-sec text-success text-center px-1">
                                 <p class="fs-4 text-success fw-bold pt-2">
                                     2017 - Present
                                 </p>
                                 <h6>✓ Community Secondary School, Ejure, Ofante, Kogi State.
                                     NYSC Classroom Teacher for</h6>
-                                <p class="text-light p-2">
+                                <p class="p-2">
                                     Godfrey Okoye University and its Group of Institutions.
                                 </p>
                             </div>
@@ -163,7 +165,109 @@
         </div>
     </section>
     <!-- Skill section -->
+    <section class="mt-5 pt-3">
+        <h2 class="text-success text-center fw-bold">Skills</h2>
+        <div class="container pb-5">
+            <div class="row align-items-center justify-content-center">
+                <div class="col-lg-3 col-md-6">
+                    <div class="d-flex justify-content-around">
+                        <p class="mb-0 mt-5 fw-bold">
+                            Administrative/secretarial tasks<!-- PA, and .-->
+                        </p>
+                        <p class="pt-5 mb-0 text-success fw-bold">
+                            95%
+                        </p>
+                    </div>
+                    <div class="progress mt-4" role="progressbar" aria-label="Success example" aria-valuenow="95"
+                        aria-valuemin="0" aria-valuemax="100">
+                        <div class="progress-bar bg-success fs-3 py-5" style="width: 95%">95%</div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="d-flex justify-content-around">
+                        <p class="mb-0 mt-5 fw-bold">
+                            Communication skills written and verbal<!-- PA, and .-->
+                        </p>
+                        <p class="pt-5 mb-0 text-success fw-bold">
+                            85%
+                        </p>
+                    </div>
+                    <div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="85"
+                        aria-valuemin="0" aria-valuemax="100">
+                        <div class="progress-bar bg-success fs-3 py-5" style="width: 85%">85%</div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="d-flex justify-content-around">
+                        <p class="mb-0 mt-5 fw-bold">
+                            Computers and Microsoft Office suite.<!-- PA, and .-->
+                        </p>
+                        <p class="pt-5 mb-0 text-success fw-bold">
+                            80%
+                        </p>
+                    </div>
+                    <div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="80"
+                        aria-valuemin="0" aria-valuemax="100">
+                        <div class="progress-bar bg-success fs-3 py-5" style="width: 80%">80%</div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="d-flex justify-content-around">
+                        <p class="mb-0 mt-5 fw-bold">
+                            Industrial training in Proximate analysis, Water analysis, and Bio-ethanol
+                            extraction<!-- PA, and .-->
+                        </p>
+                        <p class="pt-5 mb-0 text-success fw-bold">
+                            90%
+                        </p>
+                    </div>
+                    <div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="90"
+                        aria-valuemin="0" aria-valuemax="100">
+                        <div class="progress-bar bg-success fs-3 py-5 text-success" style="width: 90%">90%</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
+    <!-- education -->
+    <section>
+        <div class="container-fluid">
+            <h2 class="text-success text-center fw-bold">Education</h2>
+            <div class="row justify-content-center">
+                <div class="col-lg-8 py-3">
+                    <div class="card rounded-3 shadow p-5">
+                        <div class="row justify-content-center align-items-center gx-5 gy-4">
+                            <div class="col-lg-3 col-md-6 rounded bg-sec text-light text-center px-1">
+                                <p class="fs-4 text-success fw-bold pt-2">
+                                    (B.Sc) in Education <br>(2021).
+                                </p>
+                                <p class="fs-4 text-success fw-bold pt-2">
+                                    (B.Sc) in Applied Biochemistry (2014).
+                                </p>
+                                <p class="fs-4 text-success fw-bold pt-2">
+                                    (SSCE) 2006.
+                                </p>
+                            </div>
+                            <div class="col-lg-8 col-md-6">
+                                <ul>
+                                    <li>Bachelor of Science(B.Sc)in Education (2021): Enugu State University of Science
+                                        and Technology (ESUT).
+                                    </li>
+                                    <li>Bachelor of Science(B.Sc) in Applied Biochemistry (2014): Enugu State University
+                                        of Science and Technology (ESUT).
+                                        .</li>
+                                    <li> Senior School Certificate (SSCE) 2006: Isiuzo Secondary School, Ikem, Neke.
+                                    </li>
+
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <footer class="container-fluid text-light text-center bg-dark py-2">
         <h5>&copy; Copyright@ 2023 - All Rights Reserved.</h5><br />
     </footer>
@@ -174,6 +278,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
         integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
         crossorigin="anonymous"></script>
+        <!-- AOS SCRIPT -->
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+        <script>
+            AOS.init();
+          </script>
 </body>
 
 </html>
